# ChangeLog for xfce-base/xfce-utils
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-utils/ChangeLog,v 1.74 2006/12/02 09:36:17 dev-zero Exp $

  02 Dec 2006; Tiziano Müller <dev-zero@gentoo.org>
  xfce-utils-4.2.2-r1.ebuild, xfce-utils-4.2.3.ebuild:
  ~x86-fbsd keyword added

  13 Nov 2006; Bryan Østergaard <kloeri@gentoo.org>
  xfce-utils-4.2.3.ebuild:
  Stable on Alpha.

  20 Jul 2006; Daniel Ostrow <dostrow@gentoo.org>
  xfce-utils-4.3.90.2.ebuild:
  Add dep on xmessage, thanks go to drac for catching the dep.

  13 Jul 2006; Aron Griffis <agriffis@gentoo.org> xfce-utils-4.2.3.ebuild:
  Mark 4.2.3 stable on ia64

*xfce-utils-4.3.90.2 (10 Jul 2006)

  10 Jul 2006; Brad Cowan <bcowan@gentoo.org> +xfce-utils-4.3.90.2.ebuild:
  Xfce beta 2 builds

  09 Jul 2006; Joshua Kinard <kumba@gentoo.org> xfce-utils-4.2.3.ebuild:
  Marked stable on mips.

  05 Jun 2006; Stefan Schweizer <genstef@gentoo.org>
  +files/nolisten-tcp.patch, xfce-utils-4.2.3.ebuild,
  xfce-utils-4.3.90.1.ebuild:
  commit for drac: make X not listen on tcp for xfce, bug 61852 thanks to
  Geoff <thunderlove@charter.net>

  22 Apr 2006; Markus Rothe <corsair@gentoo.org> xfce-utils-4.2.3.ebuild:
  Stable on ppc64

  20 Apr 2006; Mike Doty <kingtaco@gentoo.org> xfce-utils-4.3.90.1.ebuild:
  fix whitespace

  20 Apr 2006; Mike Doty <kingtaco@gentoo.org> xfce-utils-4.2.3.ebuild:
  amd64 stable, bug 129371

*xfce-utils-4.3.90.1 (20 Apr 2006)

  20 Apr 2006; Daniel Ostrow <dostrow@gentoo.org>
  +xfce-utils-4.3.90.1.ebuild:
  Version bump for 4.4_beta1.

  17 Apr 2006; Michael Hanselmann <hansmi@gentoo.org>
  xfce-utils-4.2.3.ebuild:
  Stable on ppc. See bug #129371.

  15 Apr 2006; Mark Loeser <halcy0n@gentoo.org> xfce-utils-4.2.3.ebuild:
  Stable on x86; bug #129371

  10 Apr 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  xfce-utils-4.2.3.ebuild:
  Stable on sparc wrt #129371
