@@ -1,0 +1,3 @@
+MD5 de6502dd93176b2a60e2e66bf052024f xfce-utils-4.3.99.2.tar.bz2 871702
+RMD160 f2f07138bc9d0f77f4916f11af8a179a4c90136a xfce-utils-4.3.99.2.tar.bz2 871702
+SHA256 a40832c874dda5a06c0208cd178a8d02cd61cb2379aa46cdffbe3fb592fd551c xfce-utils-4.3.99.2.tar.bz2 871702
