@@ -1,6 +1,12 @@
 # ChangeLog for xfce-base/xfce-utils
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-utils/ChangeLog,v 1.74 2006/12/02 09:36:17 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-utils/ChangeLog,v 1.75 2006/12/05 17:01:42 nichoj Exp $
+
+*xfce-utils-4.3.99.2 (07 Dec 2006)
+
+  07 Dec 2006; Joshua Nichols <nichoj@gentoo.org>
+  +xfce-utils-4.3.99.2.ebuild:
+  Version bump for RC2. See bug #146563.
 
   02 Dec 2006; Tiziano Müller <dev-zero@gentoo.org>
   xfce-utils-4.2.2-r1.ebuild, xfce-utils-4.2.3.ebuild:
